--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://localhost:3306/design-app?useUnicode=true&useLegacyDatatimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Pass.123
+spring.datasource.password=70618.Eda
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 server.port=8094
